<resources>
    <string name="app_name">soribori</string>
    <string name="app_title">Soribori Sample</string>
    <string name="voice_recognition_start">Voice_recognition_start</string>
    <string name="voice_recognition_stop">Voice_recognition_stop</string>
    <string name="name_registration">Name_registration</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="thread01">Thread01</string>
    <string name="thread02">Thread02</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="please_enter_only_your_second_name">PLEASE ENTER ONLY YOUR SECOND NAME!!</string>
    <string name="name_registration1">Name registration!</string>
    <string name="the_user_name_is_not_yet_registered">The user name is not yet registered.</string>
    <string name="title_activity_user_custom_sound">UserCustomSound</string>
    <string name="user_s_custom_sound_resgistration">User\'s Custom Sound Resgistration</string>
    <string name="check_sound_classification_items">Check sound classification items</string>
    <string name="name_update">Name Update</string>
    <string name="voice_recognition_auto">voice_recognition_auto</string>
    <string name="voice_recognition_auto_stop">voice_recognition_auto_stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test3333">test3333</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
